# SwiftMail

./: .env.example  README.md  pyproject.toml
clients/: admin.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py
clients/templates/forms/: add_client.html  delete_client.html  edit_client.html
clients/templates/includes/: base.html  sidebar.html
clients/templates/pages/: all_clients.html  client_detail.html  client_list.html  main_page.html
clients/templatetags/: group_tag.py  perm_tag.py
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mail_owner.py  0004_alter_mail_status.py  0005_alter_mailingattempt_status.py
mailing/templates/forms/: add_mail.html  delete_mail.html  update_mail.html
mailing/templates/pages/: all_mail.html  detail_mail.html  mailing_statistic.html  mails_list.html
message/: admin.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_message_owner.py  0003_alter_message_owner.py
message/templates/forms/: add_message.html  delete_message.html  update_message.html
users/: admin.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_token.py  0002_remove_customuser_token.py  0003_alter_customuser_options.py
users/templates/: login.html
utils/: email_service.py  mixins.py
(+15 files in other folders)
