[tool.poetry]
name = "swiftmail"
version = "0.1.0"
description = ""
authors = ["Valdemar <vladimirteslenko@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
pillow = "^11.1.0"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
ipython = "^8.32.0"
redis = "^5.2.1"
django-debug-toolbar = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
